--- a/public/index.html
+++ b/public/index.html
@@ -280,6 +280,6 @@
     <p>© 2026 Hassan | All Rights Reserved</p>
 </footer>
 
-<script src="static/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
