--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="hero-img">
-        <img src="img/profile.jpeg" alt="Hassan Profile">
+        <img src="img/profile.jpeg">
     </div>
 </section>
 
